--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/jsurajkumar"><img class="footer-logo" src="images/linkedin.png" alt="linkedin-logo"></a>
-      <a class="footer-link" href="https://twitter.com/tipofcomedy"><img class="footer-logo" src="images/twitter.png" alt="twitter-logo"></a>
-      <a class="footer-link" href="https://www.instagram.com/_kjsuraj_"><img class="footer-logo" src="images/instagram.png" alt="instagram-logo"></a>
+      <a class="footer-link" href="https://twitter.com/_kjsuraj_"><img class="footer-logo" src="images/twitter.png" alt="twitter-logo"></a>
+      <a class="footer-link" href="https://www.instagram.com/_kjsuraj"><img class="footer-logo" src="images/instagram.png" alt="instagram-logo"></a>
       <p class="copyright">© 2021 Suraj KJ.</p>
     </div>
 
