--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="profile">
         <img src="images/Suraj pic2.png" alt="Suraj's Profile Picture" style="width:150px;height:150px;border-radius:100%">
         <h2>Hello.</h2>
-        <p class="intro">I'm a writer, web developer, programmer and also do some photo editing as well</p>
+        <p class="intro">I'm a writer, web developer, programmer and I do some photo editing as well</p>
       </div>
       <hr>
       <div class="skills">
@@ -28,25 +28,25 @@
         <div class="skill-row">
           <img class="skillicon1" src="images/coder.png" alt="programmer-icon">
           <h3>Design & Development</h3>
-          <p>I write codes for websites and also do c and c++ programming.</p>
+          <p>I write codes for websites and I also program in C and C++ language.</p>
         </div>
         <div class="skill-row">
           <img class="skillicon2" src="images/writer.png" alt="writer-icon">
           <h3>Writing</h3>
-          <p>I write short stories, quotes and always trying to expand genres of writing.</p>
+          <p>I write short stories, quotes and always trying to expand my genres of writing.</p>
         </div>
         <div class="skill-row">
           <img class="skillicon3" src="images/editor.png" alt="writer-icon">
           <h3>Editing</h3>
-          <p>I like edit photos. I using Adobe photoshop for it.</p>
+          <p>I like edit photos. I use Adobe photoshop for it.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you want to work together.</h3>
-        <p class="contact-message">Mail me for any work related to website development or marketing. I would love to do that.</p>
-        <a class="btn" href="mailto:surajkjstar@gmail.com">CONTACT ME</a>
+        <p class="contact-message">Mail me for any work related to website development, writing or marketing. I would love to do that.</p>
+        <a class="btn" href="mailto:surajkj.lpu@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
